<resources>
    <string name="app_name">Shaako</string>
    <string-array name="units">
        <item>kgs</item>
        <item>lbs</item>
    </string-array>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!--     Add translations later -->
    <string name="user">Dashboard</string>
    <string name="patient">Patient</string>
    <string name="contact">Locate</string>
    <string name="base_url">Set it later</string>
    <string name="training_contents">Training Contents</string>
    <string name="title_activity_chwprofile">CHWProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    ADDED FOR NOTIF SCHEDULE STUFF-->
    <string name="channel_name" translatable="false">@string/app_name</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="highlights">Highlights</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="patient_name">Patient Name</string>
    <string name="weight">Weight</string>
    <string name="channel_description">Task Reminder Notifications</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="no_data_available">Add new streak</string>
    <string name="current_streak_text" translatable="false">%d</string>
    <string name="task_string_format_with_time">I will %s for %s at %s in %s</string>
    <string name="task_string_format_without_time">I will %s at %s in %s</string>
    <string name="time_tag">Time</string>
    <string name="default_task_title">TODO</string>
    <string name="delete_task">Delete</string>
    <string name="edit_task">Edit</string>
    <string name="dialog_delete_title">Delete Task</string>
    <string name="dialog_delete_message">All of your progress wil be lost forever.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="task_title_empty_error">Task title cannot be empty</string>
    <string name="task_time_empty_error">Set time for task</string>
    <string name="task_location_empty_error">location cannot be empty</string>
    <string name="notification_title">Time for</string>
    <string name="dialog_quit_title">Are you sure you want to quit?</string>
    <string name="dialog_quit_message">You haven\'t completed the task, your progress will be lost</string>
    <string name="new_task_added_msg">Woo-hoo! New task added to Arsenal</string>
    <string name="task_deleted_msg">Task successfully deleted! Thank you for your service</string>
    <string name="feedback_tag">Feedback</string>
    <string name="about_tag">About App</string>
    <string name="share_app_tag">Share app with Friends</string>
    <string name="share_message">Found this awesome app, to keep tack of my habit</string>
    <string name="streak_tag">Streak</string>
    <string name="about_app"><i>Streaky</i> was born from the idea of streak counting mechanism from Duolingo app. Maintaining streak motivated me to keep going. Create task and maintain streak. Track your habit and share the app with your friends.</string>
    <string name="how_to_help">You can help us make this app better by sending any suggestion or feedback from the menu option in front screen. The app is open source on github and you can contribute there. <a href="https://github.com/alexakasanjeev/streak-counter">Github link</a></string>
    <string name="task_not_completed">Not done</string>
    <string name="task_completed">You\'re on fire today</string>
    <string name="add_patient">Add Patient</string>
    <string name="phone_number">Phone number</string>
    <string name="training_courses">Training Courses</string>
    <string name="quiz">Quiz</string>
    <string name="call_a_hospital">Emergency Dial</string>
    <plurals name="numberOfMinute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="streakLost">
        <item quantity="one">You lost streak in</item>
        <item quantity="other">You lost streaks in</item>
    </plurals>
    <string name="noInternet">Please connect to the internet!!</string>
    <string name="patientAdded">Patient Added.</string>
    <string name="emptyFields">Please fill all the fields!!</string>
    <string name="loginSuccessful">Login Successful!</string>
    <string name="invalidQR">Please scan a valid QR code!</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="show_nearby_hospitals">Show nearby hospitals</string>
    <string name="title_activity_chw_hub">ChwHub</string>


</resources>